# JHCli

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: command_handler.cpp  command_handler.h  data_parser.cpp  data_parser.h  filesystem_helpers.cpp  filesystem_helpers.h  johns_hopkins.cpp  johns_hopkins.h  region.h
tests/: CMakeLists.txt  data_parser_test.cpp
